# Jarvis

./: README.md  activity.py  exp.py  main.py  ntg.py  pyproject.toml  showcamera.py  utils.py
.github/workflows/: build-pipeline.yml
