[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "pyttsx3>=2.99",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
